# failtracker

./: README.md  docker-compose.yml
failtracker-backend/: .env  .gitignore  Cargo.toml  Dockerfile  failtracker.db
failtracker-backend/src/: main.rs
failtracker-frontend/: Dockerfile  index.html  package-lock.json  package.json
failtracker-frontend/public/: Full.png~
failtracker-frontend/src/: App.jsx
