[package]
name = "failtracker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.4"

tower-http = { version = "0.6.4", features = ["cors"] } 

hyper = { version = "1.6.0", features = ["full"] }

rand = { version = "0.9.1" }